Fix toast z-index property

--- a/src/style.css
+++ b/src/style.css
@@ -139,7 +139,7 @@ input {
     display: flex;
     place-items: center;
     background-color: rgba(0, 0, 0, .5);
-    z-index: 100;
+    z-index: 10;
     position: absolute;
     top: -10px;
     left: 0;
@@ -233,6 +233,7 @@ input {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    z-index: 100;
 }
 
 .toast {
@@ -253,6 +254,7 @@ input {
 .toast.error {
     background: rgb(134, 3, 3);
 }
+
 
 @media (prefers-color-scheme: light) {
     :root {
